# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.17.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- autotools: Tweaks, updates, and minor fixes.
	- manpage: Describe eix-diff output defaults.

*eix-0.17.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Renames: update-eix -> eix-update, diff-eix -> eix-diff,
	  update-eix-remote -> eix-remote, update-eix-layman -> eix-layman,
	  functions-eix.sh -> eix-functions.sh
	  The purpose is to get a consistent naming scheme: All programs of
	  eix now start with eix-* (except versionsort).
	  If you want to keep the old names, create corresponding symlinks:
	  This is explicitly supported and is not intended to be deprecated.
	  This is done with ./configure --enable-obsolete-symlinks or with
	  ./configure --enable-obsolete-reminder.
	  However, these symlinks are not installed by default, because
	  new users will not need them. So it is advisable to update your
	  scripts to the new names if they should ever run on newer systems.
	  Also, in eix-functions.sh two functions and a corresponding internal
	  variable have been renamed to match the new naming scheme (for the
	  functions, a wrapper is provided if you use the above configure
	  options). See the HISTORY section in "man eix" for further details.
	- Introduce EIX_SYNC_CONF (and slightly modified EIX_SYNC_OPTS)
	  EIX_REMOTE_OPTS, EIX_LAYMAN_OPTS, EIX_TEST_OBSOLETE_OPTS
	  These defaults are now evaluated in the corresponding scripts,
	  so be aware about quoting and security!
	- eix-sync: Introduce options and corresponding calling conventions.
	- eix-remote: Introduce -U -f -a (useful as defaults)
	- eix-remote: Include label names and correct paths in virtual names.
	- eix-remote: Optionally use sudo to change permissions
	- eix-remote: Remove -O since remote script now produces proper files.
	- eix-remote: Rename OVERLAYPARENT into LOCAL_LAYMAN and -o into -l
	  since now not the parent but the full path are required.